--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "eslint": "^4.6.1"
   },
   "devDependencies": {
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-jsdoc": "^3.1.2",
+    "eslint-plugin-require-jsdoc": "^1.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
